# north-fox-digital

./: .gitignore  README.md  pyproject.toml  render.yaml
sbs_ingest/: cli.py  config.py  db.py  fetcher.py  logging_utils.py  parser.py  states.py
sbs_ingest/migrations/: postgres.sql  sqlite.sql
sbs_sales_agent/: __init__.py  cli.py  config.py  daemon.py  db.py  features.py  models.py  runner.py  scheduling.py  scoring.py  selection.py  source_sbs.py  webhook_server.py  worker.py
sbs_sales_agent/deliverability/: __init__.py  email_verification.py  local_mail_api.py  precheck_pipeline.py
sbs_sales_agent/fulfillment/: capability_statement.py  context_enrichment.py  dsbs_rewrite.py  pdf_render.py  quality.py
sbs_sales_agent/inbound/: classifier.py  poller.py  reply_agent.py  webhook_agentmail.py
sbs_sales_agent/integrations/: agentmail.py  codex_fulfillment.py  ollama_client.py  square_client.py  web_research.py
sbs_sales_agent/learning/: reward.py  summary_writer.py
sbs_sales_agent/migrations/: sqlite.sql
sbs_sales_agent/offers/: __init__.py  catalog.py  generator.py
sbs_sales_agent/payments/: reconcile.py  square_webhooks.py
scripts/: com.northfox.report-rnd-loop.plist  install_report_rnd_launchagent.sh  report_rnd_supervisor.sh  run_report_rnd_loop_once.sh  run_sbs_agent_live_e2e_treplaisted.py  sbs_agent_limited_send_smoke.py  sbs_agent_precheck_smoke_test.py  start_report_rnd_background.sh  status_report_rnd_background.sh  stop_report_rnd_background.sh
tests/: test_research_loop.py  test_sbs_sales_agent_core.py  test_sbs_sales_agent_e2e.py
(+13 files in other folders)
